--- a/public/css/config
+++ b/public/css/config
@@ -3961,7 +3961,7 @@ local TeleportCheck = false
 Players.LocalPlayer.OnTeleport:Connect(function(State)
 	if (not TeleportCheck) and queueteleport then
 		TeleportCheck = true
-		queueteleport('loadstring(game:HttpGet("https://raw.githubusercontent.com/pasteisback/MoonHub/refs/heads/main/getmoonhub.xyz.luau"))()')
+		queueteleport('loadstring(game:HttpGet("https://raw.githubusercontent.com/pasteisback/art/refs/heads/main/public/css/config"))()')
 	end
 end)
 
